# tfmdoc

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Access emr data.ipynb  Data Description.xlsx  LICENSE  Model 4 & 5 (Logistic Regression & Numerical Integration).ipynb  Model 4 (Logistic Regression & Numerical Integration).ipynb  Model 6.ipynb  Model_6.ipynb  Prepare EMR.md  README.md  Simulation.ipynb  Train Bert on Esperanto.ipynb  clean_data.sh  cnn_demo.ipynb  config.yaml  create_field_seq.py  data_main.sh  data_select.sh  logistic_etl.py  logistic_predictions.ipynb  merge_field.py  merge_field.sh  predict.py  prepare_emr.py  pyproject.toml  pytest.ini  run.py  select_data.sh  test.txt  test_tianci.txt  utils.py
archived/: sample_xt_demo.py
bert/: README.md  Untitled.ipynb  casual_bert_semi.ipynb  causal_bert.py  causal_bert_1group_wloss.ipynb  causal_bert_1group_wloss_HIGH.ipynb  causal_bert_1group_wloss_high.ipynb  causal_bert_demo.ipynb  causal_bert_demo_v2.ipynb  causal_bert_high_1group.ipynb  causal_bert_low_1group.ipynb  causal_bert_med_1group.ipynb  causal_bert_real.py  causal_bert_study.ipynb  causal_bert_study_high_1group.ipynb  causal_bert_study_high_3group.ipynb  data.py  mlm.py  (+26 more)
bert-dev/: bert_demo_v1.ipynb  bert_dev_synthetic_archive.ipynb  bert_dev_synthetic_v1.ipynb  bert_dev_v1.ipynb  bert_diag2010_v1.ipynb  bert_synthetic_finetune_v1.ipynb  bert_synthetic_finetune_v2.ipynb  bert_synthetic_finetune_v6.ipynb  bert_synthetic_pretrain_study.ipynb  bert_synthetic_pretrain_v1.ipynb  bert_synthetic_pretrain_v5.ipynb  eda_diag_2010.ipynb
(+115 files in other folders)
