[tool.poetry]
name = "tfmdoc"
version = "0.1.0"
description = "Deep Learning and Causal Inference for Electronic Health Records"
authors = ["Prayag Chatha", "Jeffrey Regier"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.8.1%2Bcu111-cp38-cp38-linux_x86_64.whl"}
scikit-learn = "^0.24.1"
jupyter = "^1.0.0"
pytorch-lightning = "^1.1.5"
pandas = "^1.2.2"
hydra-core = "^1.0.6"
fastparquet = "^0.5.0"
matplotlib = "^3.4.2"
Hydra = "^2.5"
torch-tb-profiler = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.11.1"
black = "^20.8b1"
pylint = "^2.6.0"
pre-commit-hooks = "^3.4.0"
pre-commit = "^2.10.1"
rope = "^0.18.0"
isort = "^5.7.0"
jedi = "^0.17.2"
wemake-python-styleguide = "^0.15.1"
sas7bdat = "^2.2.3"
jupyterlab = "^3.0.14"

[tool.poetry.scripts]
tfmdoc = "tfmdoc.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
